* 2006-06-08 Jeremy Sanders <jeremy@jeremysanders.net>
  - Remove dependency of widget module on settings module
	
* 2006-06-03 Jeremy Sanders <jeremy@jeremysanders.net>
  - Remove obsolete pref.py from utils
	
* 2006-05-29 Jeremy Sanders <jeremy@jeremysanders.net>
  - Import path munging to avoid 2x importing
	
* 2006-05-28 Jeremy Sanders <jeremy@jeremysanders.net>
  - Further minor changes for rpm packaging

* 2006-05-27 Jeremy Sanders <jeremy@jeremysanders.net>
  - Move logo and icon for helping install
	
* 2006-05-21 Jeremy Sanders <jeremy@jeremysanders.net>
  - Further reference improvements
  - Add icon for stylesheet
  - Add default filename for exporting eps files
  - Clean up document operation batching
  - Add Import/Export stylesheet menu items
  
* 2006-04-24 Jeremy Sanders <jeremy@jeremysanders.net>
  - Fix new labels on actions
	
* 2006-04-10 Jeremy Sanders <jeremy@jeremysanders.net>
  - Clip plotters to axes ranges rather than plot
	
* 2006-04-09 Jeremy Sanders <jeremy@jeremysanders.net>
  - Further icons for treeview
  - Move link buttons into label of setting
  - Linked setting should not be RO by default
  - Use weak references in settings for notification of changes
    (removes need for deleting references to notifiers)
	
* 2006-04-06 Jeremy Sanders <jeremy@jeremysanders.net>
  - Large chunk of new stylesheet code added
  - Extra icons for treeview
  
* 2006-03-23 Jeremy Sanders <jeremy@jeremysanders.net>
  - Manual major tick values can be specified
	
* 2006-03-19 Jeremy Sanders <jeremy@jeremysanders.net>
  - Command line opened files should also act as recent files
	
* 2006-03-14 Jeremy Sanders <jeremy@jeremysanders.net>
  - Added patch from James to add recent files menu
  - Correct bug where very small graph ranges cause problems
	 (thanks James)
	
* 2006-02-25 Jeremy Sanders <jeremy@jeremysanders.net>
  - Rework line marker point plotting 
  - Add lozenge plot symbols
  - Tweak click to select to add another couple of pixels
  