@@ -373,21 +373,3 @@ class Widget(object):
 
 # allow the factory to instantiate a generic widget
 widgetfactory.thefactory.register( Widget )
-
-class Painter(qt.QPainter):
-    """A painter which allows the program to know which widget it is
-    currently drawing."""
-    
-    def __init__(self, *args):
-        qt.QPainter.__init__(self, *args)
-
-        self.veusz_scaling = 1.
-
-    def beginPaintingWidget(self, widget, bounds):
-        """Keep track of the widget currently being painted."""
-        pass
-
-    def endPaintingWidget(self):
-        """Widget is now finished."""
-        pass
-    
